--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,10 @@ dependencies {
 
     // GSON
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //CSV
+    implementation "com.opencsv:opencsv:4.0"
+
+    //Dexter
+    implementation 'com.karumi:dexter:5.0.0'
 }
